--- a/templates/log-exporter/0/rancher-compose.yml
+++ b/templates/log-exporter/0/rancher-compose.yml
@@ -44,3 +44,12 @@ logstash-collector-config:
 logstash-collector:
   scale: 1
   metadata: *id001
+logstash-lb:
+  load_balancer_config:
+    haproxy_config: {}
+  health_check:
+    port: 42
+    interval: 2000
+    unhealthy_threshold: 3
+    healthy_threshold: 2
+    response_timeout: 2000
