--- a/templates/log-exporter/0/rancher-compose.yml
+++ b/templates/log-exporter/0/rancher-compose.yml
@@ -9,6 +9,7 @@
       required: true
       label: "Redis Host"
       description: Redis service to export logs to
+      default: tf-logstah-redis.uzssy3.0001.use1.cache.amazonaws.com
     - variable: "env"
       type: "string"
       required: true
