--- a/templates/monitoring-hosts/0/rancher-compose.yml
+++ b/templates/monitoring-hosts/0/rancher-compose.yml
@@ -1,6 +1,7 @@
 .catalog:
   name: Host Metrics
   version: 1.0-rancher0
+  uuid: monitoring-hosts-0
   description: |
     Monitors & Exports Host Metrics
   questions:
